<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">

<LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal" >
  <TextView android:text="@string/screen" android:id="@+id/text_screen" 
  android:layout_width="wrap_content" android:layout_height="wrap_content"
  android:paddingLeft="5dp" android:paddingRight="5dp"></TextView>
  <Spinner android:id="@+id/screen_spinner" android:prompt="@string/screen_spinner_title"
  android:entries="@array/screen_rotate"
  android:layout_width="wrap_content" android:layout_height="wrap_content"></Spinner>
</LinearLayout>

<LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal" >

    <RadioGroup android:id="@+id/camera_radioGroup" android:layout_width="fill_parent" android:orientation="horizontal" android:layout_height="wrap_content">
        <TextView android:text="@string/camera" android:id="@+id/text_camera" 
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:paddingLeft="5dp" android:paddingRight="5dp"></TextView>
        <RadioButton android:layout_width="wrap_content" android:text="@string/camera_anim" android:checked="true" android:id="@+id/camera_radioA" android:layout_height="wrap_content"></RadioButton>
        <RadioButton android:layout_width="wrap_content" android:text="@string/camera_manual" android:id="@+id/camera_radioM" android:layout_height="wrap_content"></RadioButton>
    </RadioGroup>
</LinearLayout>
<LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_weight="1">
</LinearLayout>

<LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal" >
<Button android:text="@string/OK" android:id="@+id/menu_button_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="60dp"></Button>
<Button android:text="@string/Cancel" android:id="@+id/menu_button_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="60dp"></Button>
</LinearLayout>

</LinearLayout>