<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:text="@string/copyright_google" android:layout_width="wrap_content" android:textSize="10sp" android:paddingTop="5dip" android:paddingLeft="5dip"></TextView>
    <TextView android:id="@+id/textView2" android:layout_height="wrap_content" android:text="@string/copyright_libpng" android:layout_width="wrap_content" android:textSize="10sp" android:paddingTop="5dip" android:paddingLeft="5dip"></TextView>
    <TextView android:text="@string/copyright_libjpeg" android:id="@+id/textView3" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="10sp" android:paddingTop="5dip" android:paddingLeft="5dip"></TextView>
</LinearLayout>
